--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        " 'there']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -393,14 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "thy doom untold ? </s> work , even yet , such judgment pronounced on thee Hath drawn battle yet in the world . Thou wooest , ere I knew without revenge becomes unmistakable later than '' such a mere coincidence ( At draughts in such a fatal kind , Out from crown , Ye women by thy way , Pêlion . </s> . </s> verge of right leads towards the General Terms of the speeches of the obvious purpose such treaty with Project Gutenberg-tm work red With brazen bars ! </s> Grey guard man , Art or using any Defect "
+      ", reeking from those that ! . </s> to lift the dramatic quality of gold , And I think , to and full refund set will With stars of the new bride to shield her revenge of all did betray thee ; but one stronger made , p. 46 , a ghastly sight : and justice or draw near a change that could thine own path , I think you ! </s> . </s> First , in itself fraught with a user to the name ! </s> <s> Doth it be still : 't is most bruised is they need A good deal of the Argonauts were bought by freely distributed to be freely sharing Project Gutenberg Literary Archive Foundation , privily Held higher than you paid for free access to heal my passioning ? ] </s> <s> Why does Medea 's kiss and war shall fling . </s> The person of Medea is the earliest of his own heart on his plea is that speak , ere the work electronically in the light ? </s> palter with almost devilish act , set forth to thee A true king 's room , seeing that cavilleth , that no prohibition against "
      ]
     }
    ],
@@ -425,20 +425,20 @@
     "\n",
     "lm_medea.fit(medea_corpus, vocab)\n",
     "\n",
-    "for word in lm_medea.generate(5):\n",
+    "for word in lm_medea.generate(200):\n",
     "    print(word, end = \" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "afar -- A pendant to the full Project Gutenberg-tm and future generations . </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> </s> "
+      "machinâ_ , for the matter of my pains ! him by Aiêtês , was about to lay thine head , But I -- This scene is laid on the divine origin of Medea of Euripides , by the terms of this deed ! 4 , l. 844 ff. , Bulls of fiery breath , And win herself God knows what direr thing ? scarce can be Those perils wrought whose dread yet haunteth me . <s> <s> Thou wilt not ? word of explanation or forgiveness , or an involuntary cry of pain , Her days a waste of weeping , she persuaded Pelias that he has made it serve , as people do in real life . this house and want not , knowing mine own . full in the least ; while , on her thou lovest , for the most daring heroes from all liability , costs and expenses , including their own Corinthian king and princess -- who was growing old and traditional . cases is usually invented to explain the ritual ; and ( 2 ) She wants to save , even yet , not one of Jason and Creon intended simply to crush has been transformed by her enemies and escape is victory . "
      ]
     }
    ],
@@ -449,11 +449,11 @@
     "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
     "from nltk.lm import MLE\n",
     "\n",
-    "f = open(\"the_medea.txt\")\n",
-    "medea = f.read()\n",
+    "f = open(\"the_medea_copy.txt\")\n",
+    "medea1 = f.read()\n",
     "f.close()\n",
     "\n",
-    "medea_sents = nltk.sent_tokenize(medea)\n",
+    "medea_sents = nltk.sent_tokenize(medea1)\n",
     "\n",
     "medea_sents_tokenized = [nltk.word_tokenize(s) for s in medea_sents]\n",
     "\n",
@@ -463,8 +463,14 @@
     "\n",
     "lm_medea.fit(medea_corpus, vocab)\n",
     "\n",
-    "for word in lm_medea.generate(50):\n",
-    "    print(word, end = \" \")"
+    "for sentno in range(10):\n",
+    "    words =  lm_medea.generate(200)\n",
+    "    \n",
+    "    for w in words:\n",
+    "        if w == \"</s>\":\n",
+    "            break\n",
+    "        else:\n",
+    "            print(w, end = \" \")"
    ]
   },
   {
@@ -509,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +533,7 @@
        " ('of', 'IN')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +568,7 @@
        "'AT'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +599,7 @@
        "'the'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
