--- a/In-Class Jupyter Notebooks/Python dictionaries.ipynb
+++ b/In-Class Jupyter Notebooks/Python dictionaries.ipynb
@@ -378,10 +378,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dog': 'Hund', 'armadillo': 'Guerteltier', 'platypus': 'Schnabeltier'}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict1[\"platypus\"] = \"Schnabeltier\"\n",
+    "dict1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -408,10 +422,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'the': 2, 'a': 2}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict2[\"the\"] = 2\n",
+    "\n",
+    "dict2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -459,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,13 +508,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from ice liberated are river and brooks \n",
+      "\n",
+      "vom : from\n",
+      "eise : ice\n",
+      "befreit : liberated\n",
+      "sind : are\n",
+      "strom : river\n",
+      "und : and\n",
+      "baeche : brooks\n"
+     ]
+    }
+   ],
    "source": [
     "mysent = \"vom eise befreit sind strom und baeche\"\n",
     "\n",
-    "\n"
+    "for word in mysent.split(\" \"):\n",
+    "    word = mydict[word]\n",
+    "    print(word, end = \" \")\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "for word in mysent.split(\" \"):\n",
+    "    print(word, \":\", mydict[word])\n"
    ]
   },
   {
@@ -784,10 +836,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'while': 1, 'dieters': 1, 'are': 1, 'accustomed': 1, 'to': 3, 'exercises': 1, 'of': 3, 'will,': 1, 'a': 3, 'new': 2, 'english': 1, 'translation': 1, \"germany's\": 1, 'most': 2, 'popular': 1, 'diet': 1, 'book': 1, 'takes': 1, 'the': 2, 'concept': 1, 'philosophical': 1, 'level.': 1, 'nietzschean': 1, 'diet,': 1, 'which': 1, 'commands': 1, 'its': 1, 'adherents': 1, 'eat': 1, 'superhuman': 1, 'amounts': 1, 'whatever': 1, 'they': 1, 'fear,': 1, 'is': 1, 'developing': 1, 'strong': 1, 'following': 1, 'in': 1, 'america.': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# paragraph from the Onion, March 04\n",
+    "paragraph = \"\"\"While dieters are accustomed to exercises of \n",
+    "will, a new English translation of Germany's most popular \n",
+    "diet book takes the concept to a new philosophical level. \n",
+    "The Nietzschean diet, which commands its adherents to eat \n",
+    "superhuman amounts of whatever they most fear, \n",
+    "is developing a strong following in America.\"\"\"\n",
+    "\n",
+    "counts = { }\n",
+    "\n",
+    "for word in paragraph.split():\n",
+    "    word = word.lower()\n",
+    "    if word not in counts:\n",
+    "            counts[word] = 0\n",
+    "    counts[ word ] = counts[ word ] + 1\n",
+    "\n",
+    "print( counts )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -955,10 +1033,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(',', 11),\n",
+       " ('.', 9),\n",
+       " ('the', 9),\n",
+       " ('and', 4),\n",
+       " ('of', 3),\n",
+       " ('migrants', 3),\n",
+       " ('’', 3),\n",
+       " ('they', 3),\n",
+       " ('in', 3),\n",
+       " ('to', 3),\n",
+       " ('would', 3),\n",
+       " ('a', 3),\n",
+       " ('Friday', 2),\n",
+       " ('dozens', 2),\n",
+       " ('on', 2),\n",
+       " ('Martha', 2),\n",
+       " ('s', 2),\n",
+       " ('Vineyard', 2),\n",
+       " ('for', 2),\n",
+       " ('from', 2),\n",
+       " ('volunteers', 2),\n",
+       " ('that', 2),\n",
+       " ('ferry', 2),\n",
+       " ('Aguero', 2),\n",
+       " ('said', 2),\n",
+       " ('VINEYARD', 1),\n",
+       " ('HAVEN', 1),\n",
+       " ('Mass', 1),\n",
+       " ('—', 1),\n",
+       " ('On', 1),\n",
+       " ('morning', 1),\n",
+       " ('who', 1),\n",
+       " ('landed', 1),\n",
+       " ('this', 1),\n",
+       " ('week', 1),\n",
+       " ('filed', 1),\n",
+       " ('out', 1),\n",
+       " ('church', 1),\n",
+       " ('d', 1),\n",
+       " ('been', 1),\n",
+       " ('sleeping', 1),\n",
+       " ('two', 1),\n",
+       " ('nights', 1),\n",
+       " ('hugs', 1),\n",
+       " ('local', 1),\n",
+       " ('They', 1),\n",
+       " ('now', 1),\n",
+       " ('had', 1),\n",
+       " ('full', 1),\n",
+       " ('bags', 1),\n",
+       " ('new', 1),\n",
+       " ('cellphones', 1),\n",
+       " ('As', 1),\n",
+       " ('boarded', 1),\n",
+       " ('three', 1),\n",
+       " ('white', 1),\n",
+       " ('buses', 1),\n",
+       " ('take', 1),\n",
+       " ('them', 1),\n",
+       " ('many', 1),\n",
+       " ('cried', 1),\n",
+       " ('Eliomar', 1),\n",
+       " ('30', 1),\n",
+       " ('put', 1),\n",
+       " ('up', 1),\n",
+       " ('peace', 1),\n",
+       " ('sign', 1),\n",
+       " ('smiling', 1),\n",
+       " ('thanking', 1),\n",
+       " ('waving', 1),\n",
+       " ('him', 1),\n",
+       " ('“', 1),\n",
+       " ('Thank', 1),\n",
+       " ('you', 1),\n",
+       " ('all', 1),\n",
+       " ('”', 1),\n",
+       " ('Spanish', 1),\n",
+       " ('Soon', 1),\n",
+       " ('he', 1),\n",
+       " ('his', 1),\n",
+       " ('wife', 1),\n",
+       " ('Maria', 1),\n",
+       " ('board', 1),\n",
+       " ('Massachusetts', 1),\n",
+       " ('authorities', 1),\n",
+       " ('announced', 1),\n",
+       " ('50', 1),\n",
+       " ('be', 1),\n",
+       " ('moved', 1),\n",
+       " ('military', 1),\n",
+       " ('base', 1),\n",
+       " ('Cape', 1),\n",
+       " ('Cod', 1),\n",
+       " ('so', 1),\n",
+       " ('can', 1),\n",
+       " ('find', 1),\n",
+       " ('shelter', 1),\n",
+       " ('chart', 1),\n",
+       " ('next', 1),\n",
+       " ('steps', 1),\n",
+       " ('The', 1),\n",
+       " ('move', 1),\n",
+       " ('is', 1),\n",
+       " ('voluntary', 1),\n",
+       " ('state', 1)]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marthas_vineyard = \"\"\"VINEYARD HAVEN, Mass. — On Friday morning, the dozens of migrants who landed on Martha’s Vineyard this week filed out of the church they’d been sleeping in for two nights to hugs from the local volunteers.\n",
+    "\n",
+    "They now had full bags and new cellphones. As they boarded the three white buses that would take them to the ferry, many cried. Eliomar Aguero, 30, put up a peace sign, smiling and thanking the dozens of volunteers waving him on. “Thank you all,” Aguero said in Spanish.\n",
+    "\n",
+    "Soon, he and his wife, Maria, would board a ferry. Massachusetts authorities announced Friday that the 50 migrants would be moved from Martha’s Vineyard to a military base in Cape Cod so they can find shelter and chart next steps. The move is voluntary for the migrants, the state said. \"\"\"\n",
+    "\n",
+    "mv_tokens = nltk.word_tokenize(marthas_vineyard)\n",
+    "\n",
+    "fd = nltk.FreqDist(mv_tokens)\n",
+    "\n",
+    "fd.most_common()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1232,10 +1437,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Friday : 2\n",
+      "Martha : 2\n",
+      "Vineyard : 2\n",
+      "Aguero : 2\n",
+      "Mass : 1\n",
+      "On : 1\n",
+      "They : 1\n",
+      "As : 1\n",
+      "Eliomar : 1\n",
+      "Thank : 1\n",
+      "Spanish : 1\n",
+      "Soon : 1\n",
+      "Maria : 1\n",
+      "Massachusetts : 1\n",
+      "Cape : 1\n",
+      "Cod : 1\n",
+      "The : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "marthas_vineyard = \"\"\"VINEYARD HAVEN, Mass. — On Friday morning, the dozens of migrants who landed on Martha’s Vineyard this week filed out of the church they’d been sleeping in for two nights to hugs from the local volunteers.\n",
+    "\n",
+    "They now had full bags and new cellphones. As they boarded the three white buses that would take them to the ferry, many cried. Eliomar Aguero, 30, put up a peace sign, smiling and thanking the dozens of volunteers waving him on. “Thank you all,” Aguero said in Spanish.\n",
+    "\n",
+    "Soon, he and his wife, Maria, would board a ferry. Massachusetts authorities announced Friday that the 50 migrants would be moved from Martha’s Vineyard to a military base in Cape Cod so they can find shelter and chart next steps. The move is voluntary for the migrants, the state said. \"\"\"\n",
+    "\n",
+    "mv_tokens = nltk.word_tokenize(marthas_vineyard)\n",
+    "\n",
+    "fd = nltk.FreqDist(mv_tokens)\n",
+    "\n",
+    "fd.most_common()\n",
+    "\n",
+    "for word in fd:\n",
+    "    if word.istitle():\n",
+    "        print(word, \":\", fd[word])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1472,10 +1717,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ", : 11\n",
+      ". : 9\n",
+      "’ : 3\n",
+      "— : 1\n",
+      "“ : 1\n",
+      "” : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "marthas_vineyard = \"\"\"VINEYARD HAVEN, Mass. — On Friday morning, the dozens of migrants who landed on Martha’s Vineyard this week filed out of the church they’d been sleeping in for two nights to hugs from the local volunteers.\n",
+    "\n",
+    "They now had full bags and new cellphones. As they boarded the three white buses that would take them to the ferry, many cried. Eliomar Aguero, 30, put up a peace sign, smiling and thanking the dozens of volunteers waving him on. “Thank you all,” Aguero said in Spanish.\n",
+    "\n",
+    "Soon, he and his wife, Maria, would board a ferry. Massachusetts authorities announced Friday that the 50 migrants would be moved from Martha’s Vineyard to a military base in Cape Cod so they can find shelter and chart next steps. The move is voluntary for the migrants, the state said. \"\"\"\n",
+    "\n",
+    "mv_tokens = nltk.word_tokenize(marthas_vineyard)\n",
+    "\n",
+    "fd = nltk.FreqDist(mv_tokens)\n",
+    "\n",
+    "for word in fd:\n",
+    "    if re.search(r\"^\\W$\", word) is not None:\n",
+    "        print(word, \":\", fd[word])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1486,21 +1760,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Siebenschlaefer is German for dormouse.\n",
+      "Gottesanbeterin is German for praying mantis.\n",
+      "Taschenratte is German for gopher.\n"
+     ]
+    }
+   ],
    "source": [
     "translationdict = {\"dog\":\"Hund\", \"cat\": \"Katze\", \n",
     "                   \"dormouse\":\"Siebenschlaefer\", \n",
     "                   \"praying mantis\":\"Gottesanbeterin\",\n",
     "                  \"gopher\" : \"Taschenratte\"}\n",
-    "# put your code here.\n"
+    "# put your code here.\n",
+    "\n",
+    "for key, value in translationdict.items():\n",
+    "    if len(value) >= 7:\n",
+    "        print(value, \"is German for\", key + \".\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1514,7 +1802,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
