--- a/In-Class Jupyter Notebooks/Python dictionaries.ipynb
+++ b/In-Class Jupyter Notebooks/Python dictionaries.ipynb
@@ -1663,13 +1663,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Option A\n",
+      ", : 11\n",
+      ". : 9\n",
+      "’ : 3\n",
+      "— : 1\n",
+      "“ : 1\n",
+      "” : 1\n",
+      "\n",
+      " Option B\n",
       ", : 11\n",
       ". : 9\n",
       "’ : 3\n",
@@ -1692,8 +1701,14 @@
     "\n",
     "fd1 = nltk.FreqDist(mv_tokens)\n",
     "\n",
+    "print(\"Option A\")\n",
     "for word in fd1:\n",
     "    if re.search(r\"^\\W$\", word) is not None:\n",
+    "        print(word, \":\", fd1[word])\n",
+    "\n",
+    "print(\"\\n\", \"Option B\")\n",
+    "for word in fd1:\n",
+    "    if word.isalnum() is False:\n",
     "        print(word, \":\", fd1[word])"
    ]
   },
