--- a/In-Class Jupyter Notebooks/Python dictionaries.ipynb
+++ b/In-Class Jupyter Notebooks/Python dictionaries.ipynb
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1678,7 @@
       "“ : 1\n",
       "” : 1\n",
       "\n",
-      " Option B\n",
+      "Option B\n",
       ", : 11\n",
       ". : 9\n",
       "’ : 3\n",
@@ -1703,12 +1703,12 @@
     "\n",
     "print(\"Option A\")\n",
     "for word in fd1:\n",
-    "    if re.search(r\"^\\W$\", word) is not None:\n",
+    "    if re.search(r\"^\\W$\", word):\n",
     "        print(word, \":\", fd1[word])\n",
     "\n",
-    "print(\"\\n\", \"Option B\")\n",
+    "print(\"\\n\" + \"Option B\")\n",
     "for word in fd1:\n",
-    "    if word.isalnum() is False:\n",
+    "    if not word.isalnum():\n",
     "        print(word, \":\", fd1[word])"
    ]
   },
