--- a/In-Class Jupyter Notebooks/Python dictionaries.ipynb
+++ b/In-Class Jupyter Notebooks/Python dictionaries.ipynb
@@ -1745,6 +1745,13 @@
     "    if len(value) >= 7:\n",
     "        print(value, \"is German for\", key + \".\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "THIS IS A CHANGE"
+   ]
   }
  ],
  "metadata": {
@@ -1763,7 +1770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
