--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -393,14 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", reeking from those that ! . </s> to lift the dramatic quality of gold , And I think , to and full refund set will With stars of the new bride to shield her revenge of all did betray thee ; but one stronger made , p. 46 , a ghastly sight : and justice or draw near a change that could thine own path , I think you ! </s> . </s> First , in itself fraught with a user to the name ! </s> <s> Doth it be still : 't is most bruised is they need A good deal of the Argonauts were bought by freely distributed to be freely sharing Project Gutenberg Literary Archive Foundation , privily Held higher than you paid for free access to heal my passioning ? ] </s> <s> Why does Medea 's kiss and war shall fling . </s> The person of Medea is the earliest of his own heart on his plea is that speak , ere the work electronically in the light ? </s> palter with almost devilish act , set forth to thee A true king 's room , seeing that cavilleth , that no prohibition against "
+      "handmaiden , wilt thou please , all wise , any other sort of the chime Of darkness and wit , Your anger against accepting unsolicited donations are the Attic connection with Jason 's heart , The meaning was perhaps his own ancient times before the olden Story , darling hand Thee , Jason's denunciation , and wakes the Project Gutenberg-tm concept and a great God , and the house._ CHORUS of wrath foregone . </s> an angrier hand Guideth all other work red gash growing old way Hither , and day ? </s> 's _Mort de Tintagiles_ . </s> is a constant state applicable to torture thee -- And mine enemies -- both from out to thee. . </s> peace offering upon one of thee . </s> That God Shall I must I am sore , refrain Thy deeds for cometh ! </s> those that falleth , performing , a registered trademark , art foul among their boyhood. . </s> entity providing copies of escape is false . </s> So plain living ? </s> <s> See Introduction , who should be a woman '' system without paying any Project Gutenberg-tm License terms of corn . ] </s> <s> Compliance requirements "
      ]
     }
    ],
@@ -431,14 +431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "machinâ_ , for the matter of my pains ! him by Aiêtês , was about to lay thine head , But I -- This scene is laid on the divine origin of Medea of Euripides , by the terms of this deed ! 4 , l. 844 ff. , Bulls of fiery breath , And win herself God knows what direr thing ? scarce can be Those perils wrought whose dread yet haunteth me . <s> <s> Thou wilt not ? word of explanation or forgiveness , or an involuntary cry of pain , Her days a waste of weeping , she persuaded Pelias that he has made it serve , as people do in real life . this house and want not , knowing mine own . full in the least ; while , on her thou lovest , for the most daring heroes from all liability , costs and expenses , including their own Corinthian king and princess -- who was growing old and traditional . cases is usually invented to explain the ritual ; and ( 2 ) She wants to save , even yet , not one of Jason and Creon intended simply to crush has been transformed by her enemies and escape is victory . "
+      "<s> JASON . <s> <s> So God hath heard . her , to thine own agony ? sons . , howsoe'er I shield them , and all the world to me Some path , if even now , the crown is on the chariot and is still . all my heart I hate ; but that dead breast Clung still to his : till , wild , like one possessed , He dragged himself half free ; and then Much darkness , all my house . them , die They must . down and clinging to_ CREON ) . "
      ]
     }
    ],
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "<ConditionalFreqDist with 3 conditions>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "['a', 'b', 'c']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "FreqDist({'X': 1, 'Y': 1})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -829,11 +829,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The',\n",
+       " 'Fulton',\n",
+       " 'Grand',\n",
+       " 'said',\n",
+       " 'of',\n",
+       " 'primary',\n",
+       " 'produced',\n",
+       " 'no',\n",
+       " 'that',\n",
+       " 'place']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Space for your code to solve the problem"
+    "# Space for your code to solve the problem\n",
+    "import nltk\n",
+    "\n",
+    "brown_news = nltk.corpus.brown.tagged_words(categories=\"news\")\n",
+    "\n",
+    "cfd = nltk.ConditionalFreqDist(brown_news)\n",
+    "\n",
+    "cfd_dict = {}\n",
+    "\n",
+    "len(cfd[\"a\"])\n",
+    "\n",
+    "for tuple in brown_news:\n",
+    "    cfd_dict[tuple[0]] = cfd[tuple[0]].keys(), len(cfd[tuple[0]])\n",
+    "\n",
+    "#print(\"a\", \":\", cfd_dict[\"a\"])\n",
+    "\n",
+    "cfd_ambiguous = []\n",
+    "\n",
+    "for tuple in brown_news:\n",
+    "    if len(cfd[tuple[0]]) > 1:\n",
+    "        cfd_ambiguous.append(tuple[0])\n",
+    "\n",
+    "cfd_ambiguous[:10]\n"
    ]
   },
   {
